# v_slam_hw

document/: 李群与李代数.pptx  第二讲：三维空间刚体运动.pptx
lesson3/: CMakeLists.txt  draw_trajectory.cpp
lesson4/: CMakeLists.txt  disparity.cpp  gaussnewton.cpp
lesson5/: CMakeLists.txt  GN-BA.cpp  icp.cpp
